--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -2,20 +2,37 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Login - TechZone</title>
+    <title>Connexion - TechZone</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<h1>
-    Login Form
-</h1>
-<form method="post" th:action="@{/login}">
-    <label for="username">Email</label>
-    <input type="text" id="username" name="username">
+<body class="bg-gray-100 h-screen flex items-center justify-center">
 
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password">
+<div class="max-w-md w-full bg-white p-8 rounded-lg shadow-md">
+    <h2 class="text-2xl font-bold text-center text-gray-800 mb-8">Connexion</h2>
 
-    <button type="submit">Login</button>
-</form>
+    <div th:if="${param.error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded mb-4">
+        Identifiants invalides.
+    </div>
+
+    <form th:action="@{/perform_login}" method="post" class="space-y-6">
+        <div>
+            <label  class="block text-sm font-medium text-gray-700">Email</label>
+            <input type="text" name="username" required
+                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+        </div>
+
+        <div>
+            <label class="block text-sm font-medium text-gray-700">Mot de passe</label>
+            <input type="password" name="password" required
+                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+        </div>
+
+        <button type="submit"
+                class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            Se connecter
+        </button>
+    </form>
+</div>
+
 </body>
 </html>
