--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -50,26 +50,49 @@
             </div>
         </div>
     </div>
-    <div class="flex justify-center items-center space-x-4 mt-12 py-6">
 
-        <a th:if="${hasPrevious}"
-           th:href="@{/(page=${currentPage - 1})}"
-           class="px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">
-            Précédent
-        </a>
-
+    <nav aria-label="Page navigation example" class="flex items-center space-x-4">
         <span class="text-sm text-gray-600">
         Page <span class="font-bold text-gray-900" th:text="${currentPage + 1}">1</span>
         sur <span class="font-bold text-gray-900" th:text="${totalPages}">10</span>
     </span>
+        <ul class="flex -space-x-px text-sm" th:if="${totalPages > 0}">
+            <li>
+                <a th:if="${hasPrevious}" th:href="@{/(page=${currentPage - 1})}"
+                   class="flex items-center justify-center px-3 h-9 border rounded-s-lg bg-white hover:bg-gray-100">
+                    Précédent
+                </a>
+            </li>
 
-        <a th:if="${hasNext}"
-           th:href="@{/(page=${currentPage + 1})}"
-           class="px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50">
-            Suivant
-        </a>
+            <li th:each="i : ${#numbers.sequence(0, (totalPages > 5 ? 4 : totalPages - 1))}">
+                <a th:href="@{/(page=${i})}"
+                   th:text="${i + 1}"
+                   th:classappend="${currentPage == i} ? 'bg-blue-600 text-white' : 'bg-white text-gray-700'"
+                   class="flex items-center justify-center w-9 h-9 border hover:bg-gray-100">
+                </a>
+            </li>
 
-    </div>
+            <li>
+                <a th:if="${hasNext}" th:href="@{/(page=${currentPage + 1})}"
+                   class="flex items-center justify-center px-3 h-9 border rounded-e-lg bg-white hover:bg-gray-100">
+                    Suivant
+                </a>
+            </li>
+        </ul>
+        <form class="w-32 mx-auto">
+            <label for="pageSize" class="sr-only">Produits par page</label>
+            <select id="pageSize"
+                    name="size"
+                    onchange="window.location.href = '/?page=0&size=' + this.value"
+                    class="block w-full px-3 py-2.5 bg-white border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm">
+
+                <option value="12" th:selected="${pageSize == 12}">12 par page</option>
+                <option value="24" th:selected="${pageSize == 24}">24 par page</option>
+                <option value="48" th:selected="${pageSize == 48}">48 par page</option>
+                <option value="96" th:selected="${pageSize == 96}">96 par page</option>
+            </select>
+        </form>
+    </nav>
 </div>
 </body>
 </html>
