--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -2,97 +2,130 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechZone - Accueil</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+    <link rel="stylesheet" href="../../assets/css/style_global.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap" rel="stylesheet">
+
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: {
-                        primary: '#1e40af',
+                        primary: '#1057B9',
                     }
                 }
             }
         }
     </script>
 </head>
-<body>
+<body class="bg-gray-50 font-['AR_One_Sans']">
+<div th:replace="~{component/navbar}"></div>
 
-<div class="h-screen flex flex-col justify-around items-center">
-    <h1 class="text-3xl text-center m-12">Phrase très percutante qui donne envie d’acheter nos produits !</h1>
+<main class="container mx-auto px-4">
+    <h1 class="text-xl md:text-3xl lg:text-4xl text-center my-8 md:my-12 font-bold px-4">
+        Phrase très percutante qui donne envie d’acheter nos produits !
+    </h1>
 
-    <div class="flex flex-wrap justify-around">
-        <div class="bg-zinc-100 shadow-md p-4 my-4 rounded-3xl" th:each="product : ${products}">
-            <img th:src="${product.getUrlPhoto()}" class="w-[20vw] h-[15vw] object-cover rounded-xl"
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+
+        <div class="bg-white shadow-md p-4 rounded-3xl flex flex-col" th:each="product : ${products}">
+
+            <img th:src="${product.getUrlPhoto()}"
+                 class="w-full h-48 object-cover rounded-xl mb-4"
                  th:alt="${product.getName()}">
-            <div class="flex flex-col justify-between h-[15vw] w-[20vw]">
-                <div class="flex justify-between items-center mt-4">
-                    <h5 th:text="${product.getName()}" class="font-semibold text-xl">Nom du produit</h5>
-                    <span th:if="${product.isInStock()}" class="h-4 w-4 rounded-3xl bg-green-500"></span>
-                    <span th:unless="${product.isInStock()}" class="h-4 w-4 rounded-3xl bg-red-500"></span>
-                </div>
-                <p th:text="${product.getDescription()}" class="h-[10vw] overflow-hidden text-ellipsis">Description du
-                    produit</p>
-                <div th:with="finalPrice=${product.price * (1 - product.promotionPourcent / 100.0)}">
-                    <div class="flex items-center gap-2">
-                        <p class="text-lg"
-                           th:text="${(product.isPromotion ? #numbers.formatDecimal(finalPrice, 1, 2) : product.price) + '€'}">
-                            Prix
-                        </p>
 
-                        <p th:if="${product.isPromotion}"
-                           class="text-lg line-through"
-                           th:text="${product.price + '€'}">
-                            Ancien Prix
-                        </p>
+            <div class="flex flex-col flex-grow justify-between">
+                <div>
+                    <div class="flex justify-between items-start mb-2">
+                        <h5 th:text="${product.getName()}" class="font-semibold text-lg leading-tight">Nom du
+                            produit</h5>
+                        <div class="text-right text-xs font-medium">
+                            <span th:if="${product.isInStock()}"
+                                  class="text-green-500 bg-green-50 px-2 py-1 rounded-lg">Dispo.</span>
+                            <span th:unless="${product.isInStock()}"
+                                  class="text-red-500 bg-red-50 px-2 py-1 rounded-lg">Indispo.</span>
+                        </div>
                     </div>
+                    <p th:text="${product.getDescription()}"
+                       class="text-gray-600 text-sm line-clamp-3 mb-4">
+                        Description du produit
+                    </p>
+                </div>
+
+                <div class="flex justify-between items-center gap-2 pt-4 border-t border-gray-100">
+                    <div class="flex flex-col"
+                         th:with="finalPrice=${product.price * (1 - product.promotionPourcent / 100.0)}">
+                        <div th:if="${product.isPromotion}" class="mb-1">
+        <span class="bg-red-100 text-red-600 text-[10px] font-bold px-2 py-0.5 rounded-full uppercase">
+            -<span th:text="${product.promotionPourcent}">0</span>%
+        </span>
+                        </div>
+
+                        <div class="flex items-baseline gap-2">
+                            <p class="text-2xl font-extrabold tracking-tight text-slate-900"
+                               th:text="${(product.isPromotion ? #numbers.formatDecimal(finalPrice, 1, 2) : product.price) + '€'}">
+                                29.99€
+                            </p>
+
+                            <p th:if="${product.isPromotion}"
+                               class="text-sm line-through text-gray-400 decoration-red-500/50"
+                               th:text="${product.price + '€'}">
+                                39.99€
+                            </p>
+                        </div>
+                    </div>
+
+                    <a href="#" class="hover:scale-110 transition-transform mx-4">
+                        <i class="fa-solid fa-cart-arrow-down text-primary text-3xl"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 
-    <nav aria-label="Page navigation example" class="flex items-center space-x-4">
-        <span class="text-sm text-gray-600">
-        Page <span class="font-bold text-gray-900" th:text="${currentPage + 1}">1</span>
-        sur <span class="font-bold text-gray-900" th:text="${totalPages}">10</span>
-    </span>
-        <ul class="flex -space-x-px text-sm" th:if="${totalPages > 0}">
+    <nav aria-label="Page navigation"
+         class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4 my-12">
+        <ul class="flex -space-x-px text-sm overflow-x-auto" th:if="${totalPages > 0}">
             <li>
                 <a th:if="${hasPrevious}" th:href="@{/(page=${currentPage - 1})}"
-                   class="flex items-center justify-center px-3 h-9 border rounded-s-lg bg-white hover:bg-gray-100">
-                    Précédent
+                   class="flex items-center justify-center px-4 w-10 h-10 py-2 border border-gray-300 rounded-s-lg bg-white hover:bg-gray-100">
+                    <i class="fa-solid fa-chevron-left"></i>
                 </a>
             </li>
 
             <li th:each="i : ${#numbers.sequence(0, (totalPages > 5 ? 4 : totalPages - 1))}">
                 <a th:href="@{/(page=${i})}"
                    th:text="${i + 1}"
-                   th:classappend="${currentPage == i} ? 'bg-blue-600 text-white' : 'bg-white text-gray-700'"
-                   class="flex items-center justify-center w-9 h-9 border hover:bg-gray-100">
+                   th:classappend="${currentPage == i} ? 'bg-primary text-white border-primary' : 'bg-white text-gray-700 border-gray-300'"
+                   class="flex items-center justify-center w-10 h-10 border hover:bg-gray-50 transition-colors">
                 </a>
             </li>
 
             <li>
                 <a th:if="${hasNext}" th:href="@{/(page=${currentPage + 1})}"
-                   class="flex items-center justify-center px-3 h-9 border rounded-e-lg bg-white hover:bg-gray-100">
-                    Suivant
+                   class="flex items-center w-10 h-10 justify-center px-4 py-2 border border-gray-300 rounded-e-lg bg-white hover:bg-gray-100">
+                    <i class="fa-solid fa-chevron-right"></i>
                 </a>
             </li>
         </ul>
-        <form class="w-32 mx-auto">
-            <label for="pageSize" class="sr-only">Produits par page</label>
+
+        <div class="flex items-center">
             <select id="pageSize"
                     name="size"
                     onchange="window.location.href = '/?page=0&size=' + this.value"
-                    class="block w-full px-3 py-2.5 bg-white border border-gray-300 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 shadow-sm">
-
-                <option value="12" th:selected="${pageSize == 12}">12 par page</option>
-                <option value="24" th:selected="${pageSize == 24}">24 par page</option>
-                <option value="48" th:selected="${pageSize == 48}">48 par page</option>
-                <option value="96" th:selected="${pageSize == 96}">96 par page</option>
+                    class="block w-20 px-3 py-2 bg-white border border-gray-300 text-sm rounded-md focus:ring-primary focus:border-primary outline-none">
+                <option value="12" th:selected="${pageSize == 12}">12</option>
+                <option value="24" th:selected="${pageSize == 24}">24</option>
+                <option value="48" th:selected="${pageSize == 48}">48</option>
             </select>
-        </form>
+        </div>
     </nav>
-</div>
+</main>
 </body>
 </html>
