--- a/src/main/resources/templates/product/home.html
+++ b/src/main/resources/templates/product/home.html
@@ -43,8 +43,12 @@
             <div class="flex flex-col flex-grow justify-between">
                 <div>
                     <div class="flex justify-between items-start mb-2">
-                        <h5 th:text="${product.getName()}" class="font-semibold text-lg leading-tight">Nom du
-                            produit</h5>
+                        <a th:href="@{/product/{id}(id=${product.id})}">
+                            <h5 th:text="${product.name}"
+                                class="font-semibold text-lg leading-tight group-hover:text-primary transition-colors">
+                                Nom du produit
+                            </h5>
+                        </a>
                         <div class="text-right text-xs font-medium">
                             <span th:if="${product.isInStock()}"
                                   class="text-green-500 bg-green-50 px-2 py-1 rounded-lg">Dispo.</span>
@@ -62,9 +66,8 @@
                     <div class="flex flex-col"
                          th:with="finalPrice=${product.price * (1 - product.promotionPourcent / 100.0)}">
                         <div th:if="${product.isPromotion}" class="mb-1">
-        <span class="bg-red-100 text-red-600 text-[10px] font-bold px-2 py-0.5 rounded-full uppercase">
-            -<span th:text="${product.promotionPourcent}">0</span>%
-        </span>
+                            <span class="bg-red-100 text-red-600 text-[10px] font-bold px-2 py-0.5 rounded-full uppercase">
+                                -<span th:text="${product.promotionPourcent}">0</span>%</span>
                         </div>
 
                         <div class="flex items-baseline gap-2">
@@ -126,6 +129,8 @@
             </select>
         </div>
     </nav>
+
 </main>
+<div th:replace="~{component/footer}"></div>
 </body>
 </html>
