--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -18,6 +18,7 @@
                 extend: {
                     colors: {
                         primary: '#1057B9',
+                        grey: '#'
                     }
                 }
             }
@@ -127,5 +128,7 @@
         </div>
     </nav>
 </main>
+
+<div th:replace="~{component/footer}"></div>
 </body>
 </html>
