fix navbar et footer

--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -1,9 +1,10 @@
 <div class="px-4 py-2 md:py-6 grid grid-cols-2 grid-rows-2 md:grid-rows-1 md:grid-cols-5 justify-between items-center w-screen bg-primary">
     <a th:href="@{/}" href="#" class="col-start-1 col-span-1">
-        <img class="w-[180px] h-[60px] object-cover" th:src="@{/images/Logo-TechZone-White.png}" alt="logo TechZone page accueil"/>
+        <img class="w-[220px] h-[70px] object-cover" th:src="@{/images/Logo-TechZone-Blue.png}" alt="logo TechZone page accueil"/>
     </a>
-    <form class="flex p-4 w-full bg-zinc-100 rounded-md row-start-2 col-span-2 md:row-start-1 md:col-start-2 md:col-span-3">
-        <input class="w-full bg-transparent" type="text">
+<!--    <h2 class="w-[150px] font-normal text-white col-start-2 col-span-1" >Entrez dans la zone du high-tech.</h2>-->
+    <form class="flex items-center p-4 w-full h-[35px] bg-zinc-100 rounded-md row-start-2 col-span-2 md:row-start-1 md:col-start-2 md:col-span-3">
+        <input class="w-full h-[32px] bg-transparent" type="text">
         <a href="#" type="submit">
             <i class="fa-solid fa-magnifying-glass "></i>
         </a>
@@ -12,4 +13,13 @@
         <a href="#"> <i class="text-3xl fa-regular fa-user text-white"></i></a>
         <a href="#"> <i class=" text-3xl fa-solid fa-basket-shopping text-white"></i></a>
     </div>
+</div>
+<div  class="p-3.5 flex items-center w-screen h-full bg-[#E0E5F0]">
+    <ul class="flex flex-wrap justify-between items-center">
+        <li class="pr-14 text-black font-semibold text-base">PC</li>
+        <li class="pr-14 text-black font-semibold text-base">Portable</li>
+        <li class="pr-14 text-black font-semibold text-base">Accessoires</li>
+        <li class="pr-14 text-black font-semibold text-base">En Promotion</li>
+        <li class="pr-14 text-black font-semibold text-base">En stock</li>
+    </ul>
 </div>
