--- a/src/main/resources/templates/component/breadcrumb.html
+++ b/src/main/resources/templates/component/breadcrumb.html
@@ -1,4 +1,4 @@
 <nav class="text-sm text-slate-400 mb-6 px-2">
   <a href="/" class="hover:text-primary">Accueil</a> /
-  <span th:text="${product.category.name}" class="capitalize">Catégorie</span>
+  <a th:href="@{/category/{id}(id=${product.getCategory().getId()})}" th:text="${product.category.name}" class="capitalize">Catégorie</a>
 </nav>
