--- a/src/main/resources/templates/product/category.html
+++ b/src/main/resources/templates/product/category.html
@@ -28,6 +28,8 @@
 <div th:replace="~{component/navbar}"></div>
 
 <main class="container mx-auto px-4">
+    <div th:replace="~{component/breadcrumbCategory :: breadcrumb(${category.name})}"></div>
+
     <h1 class="text-xl md:text-3xl lg:text-4xl text-center my-8 md:my-12 font-bold px-4">
         Phrase très percutante qui donne envie d’acheter nos produits !
     </h1>
