--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -9,7 +9,7 @@
         </a>
     </form>
     <div class="text-end space-x-6 col-start-2 md:col-start-5 col-span-1">
-        <a th:href="@{/user}" href="#"> <i class="text-3xl fa-regular fa-user text-white"></i></a>
+        <a th:href="@{/user/2}" href="#"> <i class="text-3xl fa-regular fa-user text-white"></i></a>
         <a th:href="@{/cart}" href="#"> <i class=" text-3xl fa-solid fa-basket-shopping text-white"></i></a>
     </div>
 </div>
