--- a/src/main/resources/templates/product/home.html
+++ b/src/main/resources/templates/product/home.html
@@ -152,6 +152,7 @@
                         quantity: 1
                     })
                 });
+                // TODO mettre un toast
                 console.log(response)
             })
         })
