--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -15,9 +15,15 @@
 </div>
 <div  class="p-3.5 flex items-center w-screen h-full bg-[#E0E5F0]">
     <ul class="flex flex-wrap justify-between items-center">
-        <li class="pr-14 text-black font-semibold text-base">PC</li>
-        <li class="pr-14 text-black font-semibold text-base">Portable</li>
-        <li class="pr-14 text-black font-semibold text-base">Accessoires</li>
+        <li class="pr-14 text-black font-semibold text-base">
+            <a th:href="@{/category/1}">Ordinateur</a>
+        </li>
+        <li class="pr-14 text-black font-semibold text-base">
+            <a th:href="@{/category/2}">Téléphone</a>
+        </li>
+        <li class="pr-14 text-black font-semibold text-base">
+            <a th:href="@{/category/3}">Accessoires</a>
+        </li>
         <li class="pr-14 text-black font-semibold text-base">En Promotion</li>
         <li class="pr-14 text-black font-semibold text-base">En stock</li>
     </ul>
