--- a/src/main/resources/templates/component/navbar.html
+++ b/src/main/resources/templates/component/navbar.html
@@ -24,7 +24,11 @@
         <li class="pr-14 text-black font-semibold text-base">
             <a th:href="@{/category/3}">Accessoires</a>
         </li>
-        <li class="pr-14 text-black font-semibold text-base">En Promotion</li>
-        <li class="pr-14 text-black font-semibold text-base">En stock</li>
+        <li class="pr-14 text-black font-semibold text-base">
+            <a th:href="@{/promotion}">En Promotion</a>
+        </li>
+        <li class="pr-14 text-black font-semibold text-base">
+            <a th:href="@{/inStock}">En stock</a>
+        </li>
     </ul>
 </div>
