--- a/src/main/resources/templates/product/in_stock.html
+++ b/src/main/resources/templates/product/in_stock.html
@@ -29,7 +29,7 @@
 <div th:replace="~{component/navbar}"></div>
 
 <main class="container mx-auto px-4">
-  <!-- Appeler breadcrumb stock -->
+  <div th:replace="~{component/breadcrumbStock}"></div>
 
   <h1 class="text-xl md:text-3xl lg:text-4xl text-center my-8 md:my-12 font-bold px-4">
     Phrase très percutante qui donne envie d’acheter nos produits !
