--- a/src/main/resources/templates/product/search.html
+++ b/src/main/resources/templates/product/search.html
@@ -18,7 +18,6 @@
                 extend: {
                     colors: {
                         primary: '#1057B9',
-                        grey: '#'
                     }
                 }
             }
@@ -29,9 +28,12 @@
 <div th:replace="~{component/navbar}"></div>
 
 <main class="container mx-auto px-4">
+
     <h1 class="text-xl md:text-3xl lg:text-4xl text-center my-8 md:my-12 font-bold px-4">
         Phrase très percutante qui donne envie d’acheter nos produits !
     </h1>
+
+    <h2 th:text="'Resultat pour: '+${search}">Recherche</h2>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
 
@@ -98,14 +100,15 @@
          class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4 my-12">
         <ul class="flex -space-x-px text-sm overflow-x-auto" th:if="${totalPages > 0}">
             <li>
-                <a th:if="${hasPrevious}" th:href="@{/(page=${currentPage - 1})}"
+                <a th:if="${hasPrevious}" th:href="@{'/search?query=' + ${search}(page=${currentPage - 1}, size=${pageSize})}"
                    class="flex items-center justify-center px-4 w-10 h-10 py-2 border border-gray-300 rounded-s-lg bg-white hover:bg-gray-100">
                     <i class="fa-solid fa-chevron-left"></i>
                 </a>
             </li>
 
             <li th:each="i : ${#numbers.sequence(0, (totalPages > 5 ? 4 : totalPages - 1))}">
-                <a th:href="@{/(page=${i})}"
+                <a
+                   th:href="@{'/search?query=' + ${search}(page=${i})}"
                    th:text="${i + 1}"
                    th:classappend="${currentPage == i} ? 'bg-primary text-white border-primary' : 'bg-white text-gray-700 border-gray-300'"
                    class="flex items-center justify-center w-10 h-10 border hover:bg-gray-50 transition-colors">
@@ -113,7 +116,7 @@
             </li>
 
             <li>
-                <a th:if="${hasNext}" th:href="@{/(page=${currentPage + 1})}"
+                <a th:if="${hasNext}" th:href="@{'/search?query=' + ${search}(page=${currentPage + 1}, size=${pageSize})}"
                    class="flex items-center w-10 h-10 justify-center px-4 py-2 border border-gray-300 rounded-e-lg bg-white hover:bg-gray-100">
                     <i class="fa-solid fa-chevron-right"></i>
                 </a>
@@ -122,9 +125,7 @@
     </nav>
 
 </main>
-
 <div th:replace="~{component/footer}"></div>
-
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         const elementBtn = document.getElementsByClassName("cart-btn")
@@ -144,7 +145,6 @@
                         quantity: 1
                     })
                 });
-                // TODO mettre un toast
                 console.log(response)
             })
         })
